# asam_ods_exd_api_IMCtermite

./: .gitignore  Dockerfile  README.md  __init__.py  example_access_exd_api_IMCtermite.ipynb  example_access_exd_api_mdf4.ipynb  exd_api_server.py  external_data_file.py  external_data_reader.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml  python-package.yml
test/: test_IMCtermite.py  test_exd_api.py  test_exd_api_etc.py
tests/: test_IMCtermite.py  test_docker_integration.py  test_exd_api.py  test_exd_api_etc.py
